--- a/src/newpackage/view/MenuUtama.form
+++ b/src/newpackage/view/MenuUtama.form
@@ -134,7 +134,7 @@
           <Font name="Tahoma" size="24" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
-        <Property name="text" type="java.lang.String" value="Nama Karyawan :"/>
+        <Property name="text" type="java.lang.String" value="Nama Saya :"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
